<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Word Wise</string>
    <string name="input_hint">Enter new word</string>
    <string name="definition">Definitions</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="define">define</string>
    <string name="phonetic_sound">phonetic sound</string>
    <string name="shimmer_phonetic">shimmer phonetic</string>
    <string name="shimmer_sound_icon">shimmer sound icon</string>
    <string name="content_shimmer">content shimmer</string>
    <string name="quote">Quote</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="author">Author</string>
</resources>