<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/rect"
            android:layout_height="24dp"
            android:contentDescription="@string/shimmer_phonetic" />
        <ImageView
            android:src="@drawable/circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/shimmer_sound_icon" />
    </LinearLayout>
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
    <ImageView
        android:src="@drawable/rect"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="64dp"
        android:contentDescription="@string/content_shimmer" />
</LinearLayout>
