<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_word"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="text"
                android:textSize="12sp"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/define_btn"
            app:icon="@drawable/outline_search"
            app:iconGravity="textStart"
            app:iconSize="32dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/define" />
    </LinearLayout>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <include layout="@layout/main_search_shimmer"/>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <LinearLayout
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/phonetic"
            android:textSize="24sp"
            android:textColor="?attr/colorPrimary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/sound_btn"
            android:src="@drawable/sound"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/phonetic_sound" />
    </LinearLayout>
    <ListView
        android:id="@+id/main_meanings"
        android:layout_width="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:layout_height="wrap_content"/>
</LinearLayout>
